Fix language icon alignment in dropdown
The CSS of the Profile page were already using
a "language-icon" class, which impacted
the icons of the dropdown under "Add a language".

--- a/webroot/css/user/profile.css
+++ b/webroot/css/user/profile.css
@@ -87,10 +87,10 @@
     height: 20px;
 }
 
-.language-icon {
+md-list .language-icon {
     margin: 26px 20px 0 0;
 }
-html[dir="rtl"] .language-icon {
+html[dir="rtl"] md-list .language-icon {
     margin: 26px 0 0 20px;
 }
 
